--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agenda de Contactos</title>
+  <link rel="stylesheet" href="/css/themes.css">
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <button id="theme-toggle" class="theme-toggle">
+    <i class="fas fa-moon"></i>
+  </button>
+  
   <div class="container">
     <h1>Agenda de Contactos</h1>
     <div id="loginForm">
@@ -21,7 +27,7 @@
           <input type="password" id="password" name="password" required>
         </div>
         <div class="error-message" id="login-error"></div>
-        <button type="submit">Login</button>
+        <button type="submit">Iniciar Sesión</button>
       </form>
       <p>¿No tienes credenciales? <a href="#" id="register-link">Registrar</a></p>
     </div>
@@ -48,6 +54,8 @@
       <p>¿Ya tienes una cuenta? <a href="#" id="login-link">Iniciar Sesión</a></p>
     </div>
   </div>
+  
+  <script src="/js/theme.js"></script>
   <script src="/js/auth.js"></script>
 </body>
 </html>
