--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
         </div>
         <div class="form-group">
           <label for="password">Clave:</label>
-          <input type="password" id="password" name="password" required>
+          <div class="password-container">
+            <input type="password" id="password" name="password" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('password')">
+              <i class="fas fa-eye" id="password-eye"></i>
+            </button>
+          </div>
         </div>
         <div class="error-message" id="login-error"></div>
         <button type="submit">Iniciar Sesión</button>
@@ -41,12 +46,22 @@
         </div>
         <div class="form-group">
           <label for="new-password">Clave:</label>
-          <input type="password" id="new-password" name="password" required>
+          <div class="password-container">
+            <input type="password" id="new-password" name="password" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('new-password')">
+              <i class="fas fa-eye" id="new-password-eye"></i>
+            </button>
+          </div>
           <small>La contraseña debe tener al menos 8 caracteres, incluyendo mayúsculas, minúsculas, números y un símbolo.</small>
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirmar Clave:</label>
-          <input type="password" id="confirm-password" name="confirmPassword" required>
+          <div class="password-container">
+            <input type="password" id="confirm-password" name="confirmPassword" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('confirm-password')">
+              <i class="fas fa-eye" id="confirm-password-eye"></i>
+            </button>
+          </div>
         </div>
         <div class="error-message" id="register-error"></div>
         <button type="submit">Registrar</button>
@@ -57,5 +72,22 @@
   
   <script src="/js/theme.js"></script>
   <script src="/js/auth.js"></script>
+  <script>
+    // Función para alternar visibilidad de contraseña
+    function togglePassword(inputId) {
+      const passwordInput = document.getElementById(inputId);
+      const eyeIcon = document.getElementById(inputId + '-eye');
+      
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        eyeIcon.classList.remove('fa-eye');
+        eyeIcon.classList.add('fa-eye-slash');
+      } else {
+        passwordInput.type = 'password';
+        eyeIcon.classList.remove('fa-eye-slash');
+        eyeIcon.classList.add('fa-eye');
+      }
+    }
+  </script>
 </body>
 </html>
