--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
               <i class="fas fa-eye" id="new-password-eye"></i>
             </button>
           </div>
-          <small>La contraseña debe tener al menos 8 caracteres, incluyendo mayúsculas, minúsculas, números y un símbolo.</small>
+          <small>La contraseña debe tener no menos de 8 caracteres, y debe contener por lo menos una letra mayúscula, letras minúsculas, números y un símbolo.</small>
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirmar Clave:</label>
